# thermoflow

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  analyze_phase2.py  analyze_timing.py  clippy_output.txt  tf-ui-output.txt
.cargo/: config.toml
apps/tf-cli/: Cargo.toml
apps/tf-cli/src/: main.rs
apps/tf-ui/: Cargo.toml
apps/tf-ui/src/: app.rs  curve_generator.rs  curve_source.rs  fluid_picker.rs  fluid_workspace.rs  input_helper.rs  main.rs  plot_workspace.rs  project_io.rs  run_worker.rs  transient_model.rs
apps/tf-ui/src/pid_editor/: commands.rs  hit_test.rs  mod.rs  model.rs  routing.rs  symbols.rs
apps/tf-ui/src/views/: fluid_view.rs  inspect_view.rs  mod.rs  module_view.rs  pid_view.rs  plot_view.rs  run_view.rs  run_view_new.rs  run_view_old.rs
apps/tf-ui/tests/: ui_smoke.rs
benchmarks/: README.md  analyze_rhs_hotpath.py  baseline.json  baseline_before_opt.json  baseline_phase6.json  baseline_phase6_nocache.json  baseline_post_phase4_reference.json  compare_results.py
crates/tf-app/: Cargo.toml  srctransient_fallback_policy.rs
crates/tf-app/src/: error.rs  lib.rs  metrics.rs  progress.rs  project_service.rs  query.rs  run_service.rs  runtime_compile.rs  transient_compile.rs  transient_fallback_policy.rs
crates/tf-app/tests/: app_smoke.rs  atmosphere_compile.rs  integration_steady.rs  integration_transient.rs  integration_transient_controls.rs  integration_transient_multicv.rs  progress_reporting.rs  run_persistence.rs  supported_examples.rs
crates/tf-bench/: Cargo.toml
crates/tf-bench/src/: lib.rs
crates/tf-components/: Cargo.toml
crates/tf-components/src/: common.rs  error.rs  lib.rs  line_volume.rs  orifice.rs  pipe.rs  pump.rs  traits.rs  turbine.rs  valve.rs
crates/tf-components/tests/: components_smoke.rs
crates/tf-controls/: Cargo.toml
crates/tf-controls/src/: actuator.rs  block.rs  controller.rs  error.rs  graph.rs  lib.rs  measured.rs  sampled.rs  signal.rs
crates/tf-core/: Cargo.toml
crates/tf-core/src/: error.rs  ids.rs  lib.rs  numeric.rs  timing.rs  units.rs
crates/tf-fluids/: Cargo.toml
crates/tf-fluids/examples/: test_density_temp.rs
crates/tf-fluids/src/: calculator.rs  catalog.rs  composition.rs  coolprop.rs  error.rs  lib.rs  model.rs  species.rs  state.rs  surrogate.rs  sweep_executor.rs  sweeps.rs  units.rs
crates/tf-fluids/tests/: coolprop_smoke.rs
crates/tf-graph/: Cargo.toml
crates/tf-graph/src/: builder.rs  error.rs  graph.rs  indexing.rs  lib.rs  validate.rs
crates/tf-graph/tests/: integration.rs
crates/tf-project/: Cargo.toml
crates/tf-project/src/: cv_init.rs  lib.rs  migrate.rs  schema.rs  validate.rs
crates/tf-project/tests/: atmosphere.rs  controls_validate.rs  examples_load.rs  examples_validate.rs  roundtrip.rs
crates/tf-results/: Cargo.toml
crates/tf-results/src/: hash.rs  lib.rs  store.rs  types.rs
crates/tf-results/tests/: run_store_roundtrip.rs  store_smoke.rs
crates/tf-sim/: Cargo.toml
crates/tf-sim/src/: actuator.rs  control_volume.rs  error.rs  events.rs  integrator.rs  junction_thermal.rs  lib.rs  model.rs  shaft.rs  sim.rs
crates/tf-sim/tests/: cutback_retry.rs  tank_blowdown.rs  turbopump_demo.rs
crates/tf-solver/: Cargo.toml
crates/tf-solver/src/: error.rs  initialization.rs  jacobian.rs  lib.rs  newton.rs  problem.rs  solve.rs  steady.rs  thermo_policy.rs
crates/tf-solver/tests/: mass_flow_test.rs  steady_network.rs
docs/: ARCHITECTURE.md  CANONICAL_PATHS.md  CURRENT_STATE_AUDIT.md  DEVELOPMENT_CONVENTIONS.md  FALLBACK_POLICY_INTEGRATION.md  FLUID_WORKSPACE_V2.5.md  PERFORMANCE_BASELINE.md  PHASE_11_COMPLETION_SUMMARY.md  PHASE_11_HOT_PATH_ANALYSIS.md  PHASE_11_RESULTS.md  PLOTTING_WORKSPACE.md  ROADMAP.md  STABILIZATION_AUDIT.md  TRANSIENT_CAPABILITIES.md  TROUBLESHOOTING.md
examples/: README.md
examples/projects/: 01_orifice_steady.yaml  02_tank_blowdown_transient.yaml  03_simple_vent_transient.yaml  03_turbopump_demo.yaml  04_two_cv_series_vent_transient.yaml  05_two_cv_pipe_vent_transient.yaml  06_two_cv_junction_vent_transient.yaml  07_linevolume_buffered_vent.yaml  08_linevolume_two_cv.yaml  09_pressure_controlled_vent.yaml  10_flow_controlled_valve.yaml
examples/projects/.thermoflow/runs/0093c6b45c49dc29dc515c9d2550c7dec5312300517919c4d6d82550ac7cc753/: manifest.json  timeseries.jsonl
examples/projects/.thermoflow/runs/06871badc993f946bc4df4dd50122babf2622b8d5335c4154b4ecdfbf882ed8a/: manifest.json  (+1 more)
examples/projects/9cd27ede889b8ea2477763c368d39c4d1922ee0129a9349d65426e6f6454dcf8/: manifest.json  timeseries.jsonl
examples/projects/e91c6e85fc53536a0b92e13f11f83f67e51aa796ea210398f5149fc9b172a98b/: manifest.json  timeseries.jsonl
examples/projects/f7703aa804636d5977fd9f3d2be42b5e03966488a0fa6e32a0fce16c4ed652cb/: manifest.json  timeseries.jsonl
examples/projects/unsupported/: 02_tank_blowdown_scheduled.yaml
(+38 files in other folders)
