[workspace]
resolver = "2"
members = [
  "crates/tf-core",
  "crates/tf-graph",
  "crates/tf-fluids",
  "crates/tf-components",
  "crates/tf-solver",
  "crates/tf-sim",
  "crates/tf-project",
  "crates/tf-results",
  "crates/tf-app",
  "crates/tf-bench",
  "apps/tf-cli",
  "apps/tf-ui",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Your Name <you@example.com>"]
repository = "https://example.com/thermoflow"
rust-version = "1.95"

[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uom = { version = "0.36", features = ["f64", "si"] }
proptest = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
nalgebra = "0.33"
rayon = "1"
sha2 = "0.10"
chrono = "0.4"
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
egui_graphs = "0.21"
egui_graph = "0.12"
egui-file-dialog = "0.7"
petgraph = "0.8"

tf-core = { path = "crates/tf-core" }
tf-graph = { path = "crates/tf-graph" }
tf-fluids = { path = "crates/tf-fluids" }
tf-components = { path = "crates/tf-components" }
tf-solver = { path = "crates/tf-solver" }
tf-sim = { path = "crates/tf-sim" }
tf-project = { path = "crates/tf-project" }
tf-results = { path = "crates/tf-results" }