[package]
name = "tf-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tf-core = { path = "../tf-core" }
tf-graph = { path = "../tf-graph" }
tf-fluids = { path = "../tf-fluids" }
tf-components = { path = "../tf-components" }
tf-solver = { path = "../tf-solver" }
tf-sim = { path = "../tf-sim" }
tf-project = { path = "../tf-project" }
tf-results = { path = "../tf-results" }

thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
uom = { version = "0.36", features = ["f64", "si"] }

[dev-dependencies]
