[package]
name = "tf-components"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tf-core = { path = "../tf-core" }
tf-fluids = { path = "../tf-fluids" }
tf-graph = { path = "../tf-graph" }
thiserror.workspace = true
uom.workspace = true

[dev-dependencies]