[package]
name = "tf-controls"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tf-core = { path = "../tf-core" }
thiserror.workspace = true
serde = { workspace = true }
uom.workspace = true

[dev-dependencies]
proptest.workspace = true
