[package]
name = "tf-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tf-core = { path = "../tf-core" }
tf-graph = { path = "../tf-graph" }
tf-fluids = { path = "../tf-fluids" }
tf-components = { path = "../tf-components" }
tf-solver = { path = "../tf-solver" }
thiserror.workspace = true
tracing.workspace = true
uom.workspace = true
